src/Interpreter_API/sql.output
Grammar

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 stmt: insert_stmt

    4 insert_stmt: INSERT INTO NAME VALUES insert_vals_list

    5 insert_vals_list: '(' insert_vals ')'
    6                 | insert_vals_list ',' '(' insert_vals ')'

    7 insert_vals: expr
    8            | insert_vals ',' expr

    9 stmt: drop_table_stmt

   10 drop_table_stmt: DROP TABLE NAME

   11 stmt: drop_index_stmt

   12 drop_index_stmt: DROP INDEX NAME

   13 stmt: quit_stmt

   14 quit_stmt: QUIT

   15 stmt: execfile_stmt

   16 execfile_stmt: EXECFILE STRING

   17 stmt: create_index_stmt

   18 create_index_stmt: CREATE INDEX NAME ON expr_index_attr

   19 expr: NAME
   20     | NAME '.' NAME
   21     | STRING
   22     | INTNUM
   23     | APPROXNUM
   24     | BOOL

   25 expr_index_attr: NAME '(' NAME ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 25
')' (41) 5 6 25
',' (44) 6 8
'.' (46) 20
';' (59) 1 2
error (256)
NAME (258) 4 10 12 18 19 20 25
STRING (259) 16 21
INTNUM (260) 22
BOOL (261) 24
APPROXNUM (262) 23
CREATE (263) 18
DROP (264) 10 12
EXECFILE (265) 16
INDEX (266) 12 18
INSERT (267) 4
INTO (268) 4
ON (269) 18
QUIT (270) 14
TABLE (271) 10
VALUES (272) 4


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
stmt_list (24)
    on left: 1 2, on right: 0 2
stmt (25)
    on left: 3 9 11 13 15 17, on right: 1 2
insert_stmt (26)
    on left: 4, on right: 3
insert_vals_list (27)
    on left: 5 6, on right: 4 6
insert_vals (28)
    on left: 7 8, on right: 5 6 8
drop_table_stmt (29)
    on left: 10, on right: 9
drop_index_stmt (30)
    on left: 12, on right: 11
quit_stmt (31)
    on left: 14, on right: 13
execfile_stmt (32)
    on left: 16, on right: 15
create_index_stmt (33)
    on left: 18, on right: 17
expr (34)
    on left: 19 20 21 22 23 24, on right: 7 8
expr_index_attr (35)
    on left: 25, on right: 18


State 0

    0 $accept: . stmt_list $end

    CREATE    shift, and go to state 1
    DROP      shift, and go to state 2
    EXECFILE  shift, and go to state 3
    INSERT    shift, and go to state 4
    QUIT      shift, and go to state 5

    stmt_list          go to state 6
    stmt               go to state 7
    insert_stmt        go to state 8
    drop_table_stmt    go to state 9
    drop_index_stmt    go to state 10
    quit_stmt          go to state 11
    execfile_stmt      go to state 12
    create_index_stmt  go to state 13


State 1

   18 create_index_stmt: CREATE . INDEX NAME ON expr_index_attr

    INDEX  shift, and go to state 14


State 2

   10 drop_table_stmt: DROP . TABLE NAME
   12 drop_index_stmt: DROP . INDEX NAME

    INDEX  shift, and go to state 15
    TABLE  shift, and go to state 16


State 3

   16 execfile_stmt: EXECFILE . STRING

    STRING  shift, and go to state 17


State 4

    4 insert_stmt: INSERT . INTO NAME VALUES insert_vals_list

    INTO  shift, and go to state 18


State 5

   14 quit_stmt: QUIT .

    $default  reduce using rule 14 (quit_stmt)


State 6

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt ';'

    $end      shift, and go to state 19
    CREATE    shift, and go to state 1
    DROP      shift, and go to state 2
    EXECFILE  shift, and go to state 3
    INSERT    shift, and go to state 4
    QUIT      shift, and go to state 5

    stmt               go to state 20
    insert_stmt        go to state 8
    drop_table_stmt    go to state 9
    drop_index_stmt    go to state 10
    quit_stmt          go to state 11
    execfile_stmt      go to state 12
    create_index_stmt  go to state 13


State 7

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 21


State 8

    3 stmt: insert_stmt .

    $default  reduce using rule 3 (stmt)


State 9

    9 stmt: drop_table_stmt .

    $default  reduce using rule 9 (stmt)


State 10

   11 stmt: drop_index_stmt .

    $default  reduce using rule 11 (stmt)


State 11

   13 stmt: quit_stmt .

    $default  reduce using rule 13 (stmt)


State 12

   15 stmt: execfile_stmt .

    $default  reduce using rule 15 (stmt)


State 13

   17 stmt: create_index_stmt .

    $default  reduce using rule 17 (stmt)


State 14

   18 create_index_stmt: CREATE INDEX . NAME ON expr_index_attr

    NAME  shift, and go to state 22


State 15

   12 drop_index_stmt: DROP INDEX . NAME

    NAME  shift, and go to state 23


State 16

   10 drop_table_stmt: DROP TABLE . NAME

    NAME  shift, and go to state 24


State 17

   16 execfile_stmt: EXECFILE STRING .

    $default  reduce using rule 16 (execfile_stmt)


State 18

    4 insert_stmt: INSERT INTO . NAME VALUES insert_vals_list

    NAME  shift, and go to state 25


State 19

    0 $accept: stmt_list $end .

    $default  accept


State 20

    2 stmt_list: stmt_list stmt . ';'

    ';'  shift, and go to state 26


State 21

    1 stmt_list: stmt ';' .

    $default  reduce using rule 1 (stmt_list)


State 22

   18 create_index_stmt: CREATE INDEX NAME . ON expr_index_attr

    ON  shift, and go to state 27


State 23

   12 drop_index_stmt: DROP INDEX NAME .

    $default  reduce using rule 12 (drop_index_stmt)


State 24

   10 drop_table_stmt: DROP TABLE NAME .

    $default  reduce using rule 10 (drop_table_stmt)


State 25

    4 insert_stmt: INSERT INTO NAME . VALUES insert_vals_list

    VALUES  shift, and go to state 28


State 26

    2 stmt_list: stmt_list stmt ';' .

    $default  reduce using rule 2 (stmt_list)


State 27

   18 create_index_stmt: CREATE INDEX NAME ON . expr_index_attr

    NAME  shift, and go to state 29

    expr_index_attr  go to state 30


State 28

    4 insert_stmt: INSERT INTO NAME VALUES . insert_vals_list

    '('  shift, and go to state 31

    insert_vals_list  go to state 32


State 29

   25 expr_index_attr: NAME . '(' NAME ')'

    '('  shift, and go to state 33


State 30

   18 create_index_stmt: CREATE INDEX NAME ON expr_index_attr .

    $default  reduce using rule 18 (create_index_stmt)


State 31

    5 insert_vals_list: '(' . insert_vals ')'

    NAME       shift, and go to state 34
    STRING     shift, and go to state 35
    INTNUM     shift, and go to state 36
    BOOL       shift, and go to state 37
    APPROXNUM  shift, and go to state 38

    insert_vals  go to state 39
    expr         go to state 40


State 32

    4 insert_stmt: INSERT INTO NAME VALUES insert_vals_list .
    6 insert_vals_list: insert_vals_list . ',' '(' insert_vals ')'

    ','  shift, and go to state 41

    $default  reduce using rule 4 (insert_stmt)


State 33

   25 expr_index_attr: NAME '(' . NAME ')'

    NAME  shift, and go to state 42


State 34

   19 expr: NAME .
   20     | NAME . '.' NAME

    '.'  shift, and go to state 43

    $default  reduce using rule 19 (expr)


State 35

   21 expr: STRING .

    $default  reduce using rule 21 (expr)


State 36

   22 expr: INTNUM .

    $default  reduce using rule 22 (expr)


State 37

   24 expr: BOOL .

    $default  reduce using rule 24 (expr)


State 38

   23 expr: APPROXNUM .

    $default  reduce using rule 23 (expr)


State 39

    5 insert_vals_list: '(' insert_vals . ')'
    8 insert_vals: insert_vals . ',' expr

    ')'  shift, and go to state 44
    ','  shift, and go to state 45


State 40

    7 insert_vals: expr .

    $default  reduce using rule 7 (insert_vals)


State 41

    6 insert_vals_list: insert_vals_list ',' . '(' insert_vals ')'

    '('  shift, and go to state 46


State 42

   25 expr_index_attr: NAME '(' NAME . ')'

    ')'  shift, and go to state 47


State 43

   20 expr: NAME '.' . NAME

    NAME  shift, and go to state 48


State 44

    5 insert_vals_list: '(' insert_vals ')' .

    $default  reduce using rule 5 (insert_vals_list)


State 45

    8 insert_vals: insert_vals ',' . expr

    NAME       shift, and go to state 34
    STRING     shift, and go to state 35
    INTNUM     shift, and go to state 36
    BOOL       shift, and go to state 37
    APPROXNUM  shift, and go to state 38

    expr  go to state 49


State 46

    6 insert_vals_list: insert_vals_list ',' '(' . insert_vals ')'

    NAME       shift, and go to state 34
    STRING     shift, and go to state 35
    INTNUM     shift, and go to state 36
    BOOL       shift, and go to state 37
    APPROXNUM  shift, and go to state 38

    insert_vals  go to state 50
    expr         go to state 40


State 47

   25 expr_index_attr: NAME '(' NAME ')' .

    $default  reduce using rule 25 (expr_index_attr)


State 48

   20 expr: NAME '.' NAME .

    $default  reduce using rule 20 (expr)


State 49

    8 insert_vals: insert_vals ',' expr .

    $default  reduce using rule 8 (insert_vals)


State 50

    6 insert_vals_list: insert_vals_list ',' '(' insert_vals . ')'
    8 insert_vals: insert_vals . ',' expr

    ')'  shift, and go to state 51
    ','  shift, and go to state 45


State 51

    6 insert_vals_list: insert_vals_list ',' '(' insert_vals ')' .

    $default  reduce using rule 6 (insert_vals_list)
